Basic Website Layout

--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     </head>
 
     <body>
-        <h1>Testing:</h1>
-        <div class="firstDiv">
-            <p>1<sup>st</sup> Div</p>
+        <h1>Header</h1>
+
+        <div class="Content">
+            <p>Contents</p>
         </div>
 
-        <div class="secondDiv">
-            <p>2<sup>nd</sup> Div</p>
+        <div class="MainBody">
+            <div class="Title">
+                <p>Title</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec convallis, nisi nec egestas faucibus, felis nisl vehicula metus, non scelerisque nunc metus ut nunc. Nunc vel tempor metus. Sed at tempus diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras vehicula a justo in sollicitudin. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam nisi tellus, faucibus sed dictum tincidunt, facilisis ac nibh. In fringilla eros non leo lobortis dignissim. Fusce porttitor enim nisl, viverra molestie lectus imperdiet nec. Nunc quis libero lobortis, consequat dui vel, fringilla neque. Donec ac sapien dolor. Ut lobortis vel erat congue gravida. Ut libero leo, eleifend vel nibh nec, posuere commodo urna. Morbi sit amet elit nulla. Aliquam purus turpis, maximus sit amet auctor in, volutpat eget nunc.</p>
         </div>
 
-        <div class="thirdDiv">
-            <p>3<sup>rd</sup> Div</p>
+        <div class="Ads">
+            <p>Advertisements</p>
         </div>
 
+        <div class="footer">
+            <h2>Footer</h2>
+        </div>
     </body>
 </html>
