Website Header and linking Files

--- a/Contact.html
+++ b/Contact.html
@@ -10,11 +10,11 @@
                 <img height="52px"; src="Logo.png" alt="Logo">
             </div>
             <div class="buttons">
-                <ul>
-                    <li><a class="button current" href="index.html">Home</a></li>
+                <ul> 
+                    <li><a class="button" href="index.html">Home</a></li>
                     <li><a class="button" href="Downloads.html">Downloads</a></li>
                     <li><a class="button" href="AboutUs.html">About Us</a></li>
-                    <li><a class="button" href="Contact.html">Contact</a></li>
+                    <li><a class="button current" href="Contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
