--- a/AboutUs.html
+++ b/AboutUs.html
@@ -11,9 +11,9 @@
             </div>
             <div class="buttons">
                 <ul>
-                    <li><a class="button current" href="index.html">Home</a></li>
+                    <li><a class="button" href="index.html">Home</a></li>
                     <li><a class="button" href="Downloads.html">Downloads</a></li>
-                    <li><a class="button" href="AboutUs.html">About Us</a></li>
+                    <li><a class="button current" href="AboutUs.html">About Us</a></li>
                     <li><a class="button" href="Contact.html">Contact</a></li>
                 </ul>
             </div>
