--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <body>
         <div class="outer">
             <div class ="logo">
-                <img height="52px"; src="Logo.png" alt="Logo">
+                <img height="52px"; src="images/Logo.png" alt="Logo">
             </div>
             <div class="buttons">
                 <ul> 
