Added WOW Slider

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <head>
         <!--External CSS Linking-->
         <link rel="stylesheet" href="styles.css">
+        <!-- Start WOWSlider.com HEAD section -->
+        <link rel="stylesheet" type="text/css" href="engine1/style.css" />
+        <script type="text/javascript" src="engine1/jquery.js"></script>
+        <!-- End WOWSlider.com HEAD section -->
     </head>
 
     <body>
@@ -17,6 +21,30 @@
                     <li><a class="button" href="Contact.html">Contact</a></li>
                 </ul>
             </div>
+        </div>
+
+        <div class="Slider">
+            <!-- Start WOWSlider.com BODY section -->
+            <div id="wowslider-container1">
+                <div class="ws_images"><ul>
+                        <li><img src="data1/images/pexelslukas669610.jpg" alt="Digital Marketing" title="Digital Marketing" id="wows1_0"/></li>
+                        <li><img src="data1/images/pexelspixabay270348.jpg" alt="Web Development" title="Web Development" id="wows1_1"/></li>
+                        <li><img src="data1/images/pexelssoumilkumar735911.jpg" alt="Game Development" title="Game Development" id="wows1_2"/></li>
+                        <li><a href="http://wowslider.net"><img src="data1/images/pexelstranmautritam326501.jpg" alt="slideshow javascript" title="Graphic Designing" id="wows1_3"/></a></li>
+                        <li><img src="data1/images/thetechnologybehindappdevelopment.png" alt="Application Development" title="Application Development" id="wows1_4"/></li>
+                    </ul></div>
+                    <div class="ws_bullets"><div>
+                        <a href="#" title="Digital Marketing"><span><img src="data1/tooltips/pexelslukas669610.jpg" alt="Digital Marketing"/>1</span></a>
+                        <a href="#" title="Web Development"><span><img src="data1/tooltips/pexelspixabay270348.jpg" alt="Web Development"/>2</span></a>
+                        <a href="#" title="Game Development"><span><img src="data1/tooltips/pexelssoumilkumar735911.jpg" alt="Game Development"/>3</span></a>
+                        <a href="#" title="Graphic Designing"><span><img src="data1/tooltips/pexelstranmautritam326501.jpg" alt="Graphic Designing"/>4</span></a>
+                        <a href="#" title="Application Development"><span><img src="data1/tooltips/thetechnologybehindappdevelopment.png" alt="Application Development"/>5</span></a>
+                    </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">image carousel</a> by WOWSlider.com v9.0</div>
+                <div class="ws_shadow"></div>
+                </div>	
+                <script type="text/javascript" src="engine1/wowslider.js"></script>
+                <script type="text/javascript" src="engine1/script.js"></script>
+    <!-- End WOWSlider.com BODY section -->
         </div>
     </body>
 </html>
