Single Page Format

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
     <head>
         <!--External CSS Linking-->
         <link rel="stylesheet" href="styles.css">
-        <!-- Start WOWSlider.com HEAD section -->
         <link rel="stylesheet" type="text/css" href="engine1/style.css" />
         <script type="text/javascript" src="engine1/jquery.js"></script>
-        <!-- End WOWSlider.com HEAD section -->
     </head>
 
     <body>
@@ -16,15 +14,14 @@
             <div class="buttons">
                 <ul>
                     <li><a class="button current" href="index.html">Home</a></li>
-                    <li><a class="button" href="Downloads.html">Downloads</a></li>
-                    <li><a class="button" href="AboutUs.html">About Us</a></li>
-                    <li><a class="button" href="Contact.html">Contact</a></li>
+                    <li><a class="button" href="#Downloads">Downloads</a></li>
+                    <li><a class="button" href="#Services">Services</a></li>
+                    <li><a class="button" href="#Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="Slider">
-            <!-- Start WOWSlider.com BODY section -->
             <div id="wowslider-container1">
                 <div class="ws_images"><ul>
                         <li><img src="data1/images/pexelslukas669610.jpg" alt="Digital Marketing" title="Digital Marketing" id="wows1_0"/></li>
@@ -41,10 +38,13 @@
                         <a href="#" title="Application Development"><span><img src="data1/tooltips/thetechnologybehindappdevelopment.png" alt="Application Development"/>5</span></a>
                     </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">image carousel</a> by WOWSlider.com v9.0</div>
                 <div class="ws_shadow"></div>
-                </div>	
+                </div>
                 <script type="text/javascript" src="engine1/wowslider.js"></script>
                 <script type="text/javascript" src="engine1/script.js"></script>
-    <!-- End WOWSlider.com BODY section -->
+        </div>
+
+        <div>
+
         </div>
     </body>
 </html>
