added Downloads Services And Back To Top button

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" type="text/css" href="engine1/style.css" />
         <script type="text/javascript" src="engine1/jquery.js"></script>
+        <!--Font Awesome-->
+        <script src="https://kit.fontawesome.com/1c7d63c76e.js" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
-        <div class="outer">
+        <div id="top" class="outer">
             <div class ="logo">
                 <a href="images/Logo.png" target="_blank"><img height="52px"; src="images/Logo.png" alt="Logo"></a>
             </div>
             <div class="buttons">
                 <ul>
                     <li><a class="button current" href="index.html">Home</a></li>
-                    <li><a class="button" href="#Downloads">Downloads</a></li>
-                    <li><a class="button" href="#Services">Services</a></li>
-                    <li><a class="button" href="#Contact">Contact</a></li>
+                    <li><a class="button" href="#downloads">Downloads</a></li>
+                    <li><a class="button" href="#services">Services</a></li>
+                    <li><a class="button" href="#portfolio">Portfolio</a></li>
+                    <li><a class="button" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -39,12 +43,88 @@
                     </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">image carousel</a> by WOWSlider.com v9.0</div>
                 <div class="ws_shadow"></div>
                 </div>
-                <script type="text/javascript" src="engine1/wowslider.js"></script>
-                <script type="text/javascript" src="engine1/script.js"></script>
         </div>
 
-        <div>
-
+        <div id="downloads">
+            <h1 class="heading">Downloads</h1>
+            <div class="container center">
+                <div class="Link">
+                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <h3>Name 1</h3>
+                    <p>...............................................................Description................................................................</p>
+                    <button class='center'>DOWNLOAD</button>
+                </div>
+                <div class="Link">
+                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <h3>Name 1</h3>
+                    <p>...............................................................Description................................................................</p>
+                    <button class='center'>DOWNLOAD</button>
+                </div>
+                <div class="Link">
+                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <h3>Name 1</h3>
+                    <p>...............................................................Description................................................................</p>
+                    <button class='center'>DOWNLOAD</button>
+                </div>
+                <div class="Link">
+                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <h3>Name 1</h3>
+                    <p>...............................................................Description................................................................</p>
+                    <button class='center'>DOWNLOAD</button>
+                </div>
+            </div> 
         </div>
+
+        <div id="services">
+            <h1 class="heading">Services</h1>
+            <ul class="container">
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Digital_marketing" target="_blank">
+                    <div class="Service">
+                    <img width="100%"; src="data1/images/pexelslukas669610.jpg" alt="pic1">
+                    <h3>Digital Marketing</h3>
+                    </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Web_development" target="_blank">
+                    <div class="Service">
+                    <img width="100%"; src="data1/images/pexelspixabay270348.jpg" alt="pic1">
+                    <h3>Web Development</h3>
+                    </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Video_game_development" target="_blank">
+                    <div class="Service">
+                    <img width="100%"; src="data1/images/pexelssoumilkumar735911.jpg" alt="pic1">
+                    <h3>Game Development</h3>
+                    </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Graphic_design" target="_blank">
+                    <div class="Service">
+                    <img width="100%"; src="data1/images/pexelstranmautritam326501.jpg" alt="pic1">
+                    <h3>Graphic Designing</h3>
+                    </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Mobile_app_development" target="_blank">
+                    <div class="Service">
+                    <img width="100%"; src="data1/images/thetechnologybehindappdevelopment.png" alt="pic1">
+                    <h3>App Development</h3>
+                    </div>
+                    </a>
+                </li>
+            </ul> 
+        </div>
+
+        <!--Back To Top Button-->
+        <a class="Top" href="#top"><img src="" alt=""><i class="fas fa-angle-double-up fa-2x topIcon" ></i></i></a>
+        <!--JavaScript-->
+        <script type="text/javascript" src="engine1/wowslider.js"></script>
+        <script type="text/javascript" src="engine1/script.js"></script>
     </body>
 </html>
