--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" type="text/css" href="engine1/style.css" />
         <script type="text/javascript" src="engine1/jquery.js"></script>
+        <title>PixelMotion</title>
         <!--Font Awesome-->
         <script src="https://kit.fontawesome.com/1c7d63c76e.js" crossorigin="anonymous"></script>
 
@@ -12,7 +13,7 @@
     <body>
         <div id="top" class="outer">
             <div class ="logo">
-                <a href="images/Logo.png" target="_blank"><img height="52px"; src="images/Logo.png" alt="Logo"></a>
+                <a href="images/Logo.png" target="_blank"><img height="52px"; src="data1/images/Logo.png" alt="Logo"></a>
             </div>
             <div class="buttons">
                 <ul>
@@ -49,25 +50,25 @@
             <h1 class="heading">Downloads</h1>
             <div class="container center">
                 <div class="Link">
-                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 1</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
                 <div class="Link">
-                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 1</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
                 <div class="Link">
-                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 1</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
                 <div class="Link">
-                    <p class="img"><img height="100px"; src="images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 1</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
