Added portfoilo links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div id="top" class="outer">
             <div class ="logo">
-                <a href="images/Logo.png" target="_blank"><img height="52px"; src="data1/images/Logo.png" alt="Logo"></a>
+                <a href="data1/images/Logo.png" target="_blank"><img height="52px"; src="data1/images/Logo.png" alt="Logo"></a>
             </div>
             <div class="buttons">
                 <ul>
@@ -57,19 +57,19 @@
                 </div>
                 <div class="Link">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
-                    <h3>Name 1</h3>
+                    <h3>Name 2</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
                 <div class="Link">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
-                    <h3>Name 1</h3>
+                    <h3>Name 3</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
                 <div class="Link">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
-                    <h3>Name 1</h3>
+                    <h3>Name 4</h3>
                     <p>...............................................................Description................................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
@@ -119,8 +119,32 @@
                     </div>
                     </a>
                 </li>
-            </ul> 
+            </ul>
+            <p style="padding-left:15px;">We provide Services described above.</p>
         </div>
+
+        <div id="portfolio">
+            <h1 class="heading">Portfolio</h1>
+
+            <div class="SingleLine center">
+                <h3 style="display: inline;">Game Development </h3>
+                <a class="button" href="https://pixelmotion.itch.io" target="_blank"> Visit</a>
+            </div>
+            <div class="SingleLine center">
+                <h3 style="display: inline;">3D Modeling </h3>
+                <a class="button" href="https://sketchfab.com/OmerBhatti" target="_blank"> Visit</a>
+            </div>
+            <div class="SingleLine center">
+                <h3 style="display: inline;">App Development </h3>
+                <a class="button" href="https://github.com/omerbhatti" target="_blank"> Visit</a>
+            </div>
+            <div class="SingleLine center">
+                <h3 style="display: inline;">Graphic Designing </h3>
+                <a class="button" href="https://www.deviantart.com/bhxt-007" target="_blank"> Visit</a>
+            </div>
+
+        </div>
+
 
         <!--Back To Top Button-->
         <a class="Top" href="#top"><img src="" alt=""><i class="fas fa-angle-double-up fa-2x topIcon" ></i></i></a>
