--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </a>
                 </li>
             </ul>
-            <p style="padding-left:15px;">We provide Services described above.</p>
+            <p style="padding-left:15px; text-align: center;">We provide Services described above.</p>
         </div>
 
         <div id="portfolio">
