--- a/index.html
+++ b/index.html
@@ -184,10 +184,7 @@
                 <a href="https://pixelmotion.itch.io" target="_blank"><i class="fab fa-itch-io fa-2x" ></i></a>
             </p>
             <p style="text-align: center;">
-                PixelMotion © 2020 |
-                Privacy & Legal |
-                Blog |
-                Locations
+                PixelMotion © 2020 | Privacy & Legal | Blog | Locations
             </p>
         </footer>
 
