--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                     <p>...............................................................Description...........................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
+                <div class="Link">
+                    <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
+                    <h3>Name 6</h3>
+                    <p>...............................................................Description...........................................................</p>
+                    <button class='center'>DOWNLOAD</button>
+                </div>
             </div> 
         </div>
 
