--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" type="text/css" href="engine1/style.css" />
         <script type="text/javascript" src="engine1/jquery.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap" rel="stylesheet">
         <title>PixelMotion</title>
         <!--Font Awesome-->
         <script src="https://kit.fontawesome.com/1c7d63c76e.js" crossorigin="anonymous"></script>
