--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--External CSS Linking-->
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" type="text/css" href="engine1/style.css" />
@@ -8,7 +11,6 @@
         <title>PixelMotion</title>
         <!--Font Awesome-->
         <script src="https://kit.fontawesome.com/1c7d63c76e.js" crossorigin="anonymous"></script>
-
     </head>
 
     <body>
