added to Portfolio

--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
                 <h3 style="display: inline-block;">Graphic Designing </h3>
                 <a class="button" href="https://www.deviantart.com/bhxt-007" target="_blank"> Visit</a>
             </div>
-            
+             <div class="SingleLine center">
+                <h3 style="display: inline-block;">Texture Seam Analyzer </h3>
+                <a class="button" href="https://omerbhatti.github.io/TextureSeamAnalyzer/" target="_blank"> Visit</a>
+            </div>
         </div>
 
         <!--Contact Form-->
