--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
         <!--Download Button-->
         <div id="downloads">
             <h1 class="heading">Downloads</h1>
-            <div class="container center">
-                <div class="Link">
+            <div class="container row">
+                <div class="Link column">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 1</h3>
                     <p>...............................................................Description...........................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
-                <div class="Link">
+                <div class="Link column">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 2</h3>
                     <p>...............................................................Description...........................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
-                <div class="Link">
+                <div class="Link column">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 3</h3>
                     <p>...............................................................Description...........................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
-                <div class="Link">
+                <div class="Link column">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 4</h3>
                     <p>...............................................................Description...........................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
-                <div class="Link">
+                <div class="Link column">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 5</h3>
                     <p>...............................................................Description...........................................................</p>
                     <button class='center'>DOWNLOAD</button>
                 </div>
-                <div class="Link">
+                <div class="Link column">
                     <p class="img"><img height="100px"; src="data1/images/Logo_Transparent_White.png" alt="pic1" class='center'></p>
                     <h3>Name 6</h3>
                     <p>...............................................................Description...........................................................</p>
@@ -95,8 +95,8 @@
         <!--Services Section-->
         <div id="services">
             <h1 class="heading">Services</h1>
-            <ul class="container">
-                <li>
+            <ul class="container row">
+                <li class="column">
                     <a href="https://en.wikipedia.org/wiki/Digital_marketing" target="_blank">
                     <div class="Service">
                     <img width="100%"; src="data1/images/pexelslukas669610.jpg" alt="pic1">
@@ -104,7 +104,7 @@
                     </div>
                     </a>
                 </li>
-                <li>
+                <li class="column">
                     <a href="https://en.wikipedia.org/wiki/Web_development" target="_blank">
                     <div class="Service">
                     <img width="100%"; src="data1/images/pexelspixabay270348.jpg" alt="pic1">
@@ -112,7 +112,7 @@
                     </div>
                     </a>
                 </li>
-                <li>
+                <li class="column">
                     <a href="https://en.wikipedia.org/wiki/Video_game_development" target="_blank">
                     <div class="Service">
                     <img width="100%"; src="data1/images/pexelssoumilkumar735911.jpg" alt="pic1">
@@ -120,7 +120,7 @@
                     </div>
                     </a>
                 </li>
-                <li>
+                <li class="column">
                     <a href="https://en.wikipedia.org/wiki/Graphic_design" target="_blank">
                     <div class="Service">
                     <img width="100%"; src="data1/images/pexelstranmautritam326501.jpg" alt="pic1">
@@ -128,7 +128,7 @@
                     </div>
                     </a>
                 </li>
-                <li>
+                <li class="column">
                     <a href="https://en.wikipedia.org/wiki/Mobile_app_development" target="_blank">
                     <div class="Service">
                     <img width="100%"; src="data1/images/thetechnologybehindappdevelopment.png" alt="pic1">
