Add Dropdown feature in top nav
Add Dropdown feature in top nav for mobile screens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div class ="logo">
                 <a href="data1/images/Logo.png" target="_blank"><img height="52px"; src="data1/images/Logo.png" alt="Logo"></a>
             </div>
-            <div class="buttons">
+            <div>
+            <div class="dropbtn fas fa-bars fa-2x" id="dropbutton" onclick="toggleDropdown();"></div>
+            <div class="buttons dropdown-content" id="myDropdown">
                 <ul>
                     <li><a class="button current" href="index.html">Home</a></li>
                     <li><a class="button" href="#downloads">Downloads</a></li>
@@ -26,6 +28,7 @@
                     <li><a class="button" href="#portfolio">Portfolio</a></li>
                     <li><a class="button" href="#contact">Contact</a></li>
                 </ul>
+            </div>
             </div>
         </div>
 
@@ -206,5 +209,18 @@
         <!--JavaScript-->
         <script type="text/javascript" src="engine1/wowslider.js"></script>
         <script type="text/javascript" src="engine1/script.js"></script>
+        <script>
+            function toggleDropdown() {
+              document.getElementById("myDropdown").classList.toggle("show");
+            }
+            window.onclick = function(e) {
+              if (!e.target.matches('.dropbtn')) {
+              var myDropdown = document.getElementById("myDropdown");
+                if (myDropdown.classList.contains('show')) {
+                  myDropdown.classList.remove('show');
+                }
+              }
+            }
+        </script>
     </body>
 </html>
